--- a/studyguide/sb/index.html
+++ b/studyguide/sb/index.html
@@ -444,6 +444,15 @@
     ],
     category: "tools"
 },
+"drag": { //hard-coded
+    color: "#c1cfb6",
+    behavior: [
+        "XX|XX|XX",
+        "XX|XX|SH",
+        "XX|XX|XX",
+    ],
+    category: "tools"    
+},
 "pick": { //hard-coded
     color: ["#fa9b9b","#fae99b","#9bfab7","#9b9dfa"],
     behavior: [
